tests/ui/eii/static/mismatch_fn_static.stderr
error: `#[hello]` must be used on a function
  --> $DIR/mismatch_fn_static.rs:10:1
   |
LL | #[hello]
   | ^^^^^^^^

error: aborting due to 1 previous error

